src/test/ui/type-alias-impl-trait/not_a_defining_use.stderr
error: non-defining opaque type use in defining scope
  --> $DIR/not_a_defining_use.rs:9:27
   |
LL | fn two<T: Debug>(t: T) -> Two<T, u32> {
   |                           ^^^^^^^^^^^
   |
note: used non-generic type `u32` for generic parameter
  --> $DIR/not_a_defining_use.rs:7:13
   |
LL | type Two<T, U> = impl Debug;
   |             ^

error: aborting due to previous error

